# snpxarray

./: .gitignore  README.md  pyproject.toml  snpxarray.ipynb
.ipynb_checkpoints/: snpxarray-checkpoint.ipynb
