[project]
name = "snpxarray"
version = "0.1.0"
description = "Show slicing and dicing with PySnpTools, Xarray/Zarr, and sgkit."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "xarray>=2024.6.0",
    "pysnptools>=0.5.14",
    "zarr>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
]

[tool.uv]
dev-dependencies = []
