[project]
name = "snpxarray"
version = "0.1.0"
description = "Show slicing and dicing with PySnpTools, Xarray/Zarr, and bio2zarr."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10,<3.11"
dependencies = [
    "pysnptools>=0.5.14",
    "jupyter>=1.1.1",
    "bio2zarr>=0.1.6",
    "xarray>=2025.6.1",
]

[tool.uv]
dev-dependencies = []
